feat: PType→GenericType bridge — replace hardcoded type switches with registry-driven dispatch
- Add toGenericType() bridge on PType.Concrete (maps parse-time → compile-time types)
- Register 19 window aggregate overloads (sum, avg, stdDev, etc.) with TypeVar returns
- Replace abs/plus/minus/times multi-concrete overloads with single TypeVar signatures
- Delete knownReturnType() (45 cases) and isWindowAggregate() (20 cases) from TypeChecker
- New dispatch: resolve by arity → Concrete returns toGenericType() → TypeVar+Relation propagates relationType
- Window count overload returns Integer (not TypeVar)

988 tests pass, 0 failures